--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "packageManager": "npm@10.7.0",
   "dependencies": {
+    "@nestjs/serve-static": "^4.0.2",
     "api-contract": "*"
   }
 }
