--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@ts-rest/nest": "^3.50.0",
     "api-contract": "*",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.5.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
