--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "packageManager": "npm@10.7.0",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@nestjs/serve-static": "^4.0.2",
-    "api-contract": "*"
+    "@nestjs/serve-static": "^4.0.2"
   }
 }
