--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,13 +26,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.1",
+    "@nestjs/websockets": "^10.4.1",
     "@ts-rest/nest": "^3.50.0",
     "api-contract": "*",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "mongoose": "^8.5.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,7 +59,6 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
-    
   },
   "jest": {
     "moduleFileExtensions": [
