--- a/apps/smartgreen/package.json
+++ b/apps/smartgreen/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
